--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -2358,7 +2358,7 @@
                                                 </div>
                                             </a>
                                         }
-                                        else if (enlace.Contains("https://www.tumblr.com/") == true)
+                                        else if (enlace.Contains("https://www.tumblr.com/") == true || enlace.Contains("tumblr.com/") == true)
                                         {
                                             <a href="@enlace" target="_blank" class="boton-pequeño" title="Tumblr" style="width: fit-content; padding: 10px;">
                                                 <div style="width: 30px; height: 30px; padding: 2px;">
