--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -34,6 +34,8 @@
         if (string.IsNullOrEmpty(juego.Caracteristicas.Descripcion) == false)
         {
             descripcion = juego.Caracteristicas.Descripcion;
+
+            descripcion = descripcion.Replace(Strings.ChrW(34).ToString(), null);
         }
     }
 
@@ -61,8 +63,20 @@
 
     <HeadContent>
         <meta name="og:title" content="@titulo" />
-        <meta name="description" content="@descripcion" />
-        <meta name="og:description" content="@descripcion" />
+
+        @if (string.IsNullOrEmpty(descripcion) == false)
+        {
+            string descripcionMeta = descripcion;
+
+            if (descripcionMeta.Length > 150)
+            {
+                descripcionMeta = descripcionMeta.Substring(0, 150) + " ...";
+            }
+
+            <meta name="description" content="@descripcionMeta" />
+            <meta name="og:description" content="@descripcionMeta" />
+        }
+
         <meta name="og:url" content="@enlace" />
         <meta name="og:image" content="@imagen" />
         <meta name="og:video" content="@mediaMostrar" />
@@ -74,7 +88,7 @@
         @{
             string nombreJson = juego.Nombre.Replace(Strings.ChrW(34).ToString(), null);
 
-            decimal estrellasJson = 0;
+            decimal estrellasJson = 1;
             string cantidadJson = "10";
             
             if (juego.Analisis != null)
@@ -83,9 +97,9 @@
                 {
                     estrellasJson = decimal.Parse(juego.Analisis.Porcentaje) / 20;
 
-                    if (estrellasJson < 0.5m)
+                    if (estrellasJson < 1)
                     {
-                        estrellasJson = 0.50m;
+                        estrellasJson = 1;
                     }
 
                     cantidadJson = juego.Analisis.Cantidad.Replace(",", null);
@@ -2370,7 +2384,7 @@
                                         {
                                             <a href="@enlace" target="_blank" class="boton-pequeño" title="Mastodon" style="width: fit-content; padding: 10px;">
                                                 <div style="width: 30px; height: 30px; padding: 2px;">
-                                                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M433 179.1c0-97.2-63.7-125.7-63.7-125.7-62.5-28.7-228.6-28.4-290.5 0 0 0-63.7 28.5-63.7 125.7 0 115.7-6.6 259.4 105.6 289.1 40.5 10.7 75.3 13 103.3 11.4 50.8-2.8 79.3-18.1 79.3-18.1l-1.7-36.9s-36.3 11.4-77.1 10.1c-40.4-1.4-83-4.4-89.6-54a102.5 102.5 0 0 1 -.9-13.9c85.6 20.9 158.7 9.1 178.8 6.7 56.1-6.7 105-41.3 111.2-72.9 9.8-49.8 9-121.5 9-121.5zm-75.1 125.2h-46.6v-114.2c0-49.7-64-51.6-64 6.9v62.5h-46.3V197c0-58.5-64-56.6-64-6.9v114.2H90.2c0-122.1-5.2-147.9 18.4-175 25.9-28.9 79.8-30.8 103.8 6.1l11.6 19.5 11.6-19.5c24.1-37.1 78.1-34.8 103.8-6.1 23.7 27.3 18.4 53 18.4 175z"/></svg>
+                                                   <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M433 179.1c0-97.2-63.7-125.7-63.7-125.7-62.5-28.7-228.6-28.4-290.5 0 0 0-63.7 28.5-63.7 125.7 0 115.7-6.6 259.4 105.6 289.1 40.5 10.7 75.3 13 103.3 11.4 50.8-2.8 79.3-18.1 79.3-18.1l-1.7-36.9s-36.3 11.4-77.1 10.1c-40.4-1.4-83-4.4-89.6-54a102.5 102.5 0 0 1 -.9-13.9c85.6 20.9 158.7 9.1 178.8 6.7 56.1-6.7 105-41.3 111.2-72.9 9.8-49.8 9-121.5 9-121.5zm-75.1 125.2h-46.6v-114.2c0-49.7-64-51.6-64 6.9v62.5h-46.3V197c0-58.5-64-56.6-64-6.9v114.2H90.2c0-122.1-5.2-147.9 18.4-175 25.9-28.9 79.8-30.8 103.8 6.1l11.6 19.5 11.6-19.5c24.1-37.1 78.1-34.8 103.8-6.1 23.7 27.3 18.4 53 18.4 175z"/></svg>
                                                 </div>
                                             </a>
                                         }
@@ -2500,7 +2514,7 @@
                                                 {
                                                     if (i < juegosCurator.Count)
                                                     {
-                                                        <CajaJuego idioma="@idioma" juego="@juegosCurator[i]" juegosUsuario="@juegosUsuario" usuarioDeseadosSteam="@usuario?.SteamWishlist" usuarioDeseadosWeb="@usuario?.Wishlist" usuarioDeseadosGog="@usuario?.GogWishlist" tipo="CajaJuego.Tipo.CuratorJuego" />
+                                                        <CajaJuego idCurator="@curator.Curator.Id" idioma="@idioma" juego="@juegosCurator[i]" juegosUsuario="@juegosUsuario" usuarioDeseadosSteam="@usuario?.SteamWishlist" usuarioDeseadosWeb="@usuario?.Wishlist" usuarioDeseadosGog="@usuario?.GogWishlist" tipo="CajaJuego.Tipo.CuratorJuego" />
                                                     }
 
                                                     i += 1;
