--- a/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
@@ -75,7 +75,7 @@
 
 		<div class="caja-diseño" style="padding: 30px;">
 			<div>
-				<a href="/account/patreonstore/" target="_blank">@Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Patreon")</a>
+				@Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Patreon")
 			</div>
 
 			<hr />
