--- a/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
@@ -265,7 +265,7 @@
 						@if (string.IsNullOrEmpty(tooltip.ReviewsIcono) == false)
 						{
 							<div style="margin-right: 20px;">
-								<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(tooltip.ReviewsIcono)" style="width: 20px; height: 20px;" alt="Reviews" loading="lazy" />
+								<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(tooltip.ReviewsIcono)" style="width: 22px; height: 22px;" alt="Reviews" loading="lazy" />
 							</div>
 						}
 					</div>
@@ -391,12 +391,12 @@
 					<div style="width: 100%; display: flex; flex-flow: column wrap; padding: 10px 20px;">
 						<div class="minimo-fuente">@juego.Nombre</div>
 
-						<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
+						<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px; gap: 10px;">
 							<div style="width: 20px; height: 20px;">
 								<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(JuegoDRM2.SacarImagen(drmUsar))" style="width: 100%; height: 100%;" loading="lazy" />
 							</div>
 
-							<div style="width: 20px; height: 20px; margin-left: 10px;">
+							<div style="width: 20px; height: 20px;">
 								<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(iconoTienda)" style="width: 100%; height: 100%;" loading="lazy" />
 							</div>
 
@@ -406,23 +406,17 @@
 								{
 									if (int.Parse(juego.Analisis.Porcentaje) > 74)
 									{
-										<div style="width: 20px; height: 20px; margin-left: 10px;">
-											<img src="/imagenes/analisis/positive.webp" style="width: 100%; height: 100%;" loading="lazy" />
-										</div>
+										<img src="/imagenes/analisis/positivo3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Analisis.Porcentaje) < 75)
 									{
-										<div style="width: 20px; height: 20px; margin-left: 10px;">
-											<img src="/imagenes/analisis/mixed.webp" style="width: 100%; height: 100%;" loading="lazy" />
-										</div>
+										<img src="/imagenes/analisis/meh3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) < 50)
 									{
-										<div style="width: 20px; height: 20px; margin-left: 10px;">
-											<img src="/imagenes/analisis/negative.webp" style="width: 100%; height: 100%;" loading="lazy" />
-										</div>
+										<img src="/imagenes/analisis/negative3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
 									}
 								}
 							}
@@ -492,6 +486,27 @@
 					<div style="display: flex; align-items: center;">
 						<div style="display: flex; align-items: center; gap: 15px; padding: 15px; width: 100%;">
 							<img src="@Juegos.JuegoDRM2.SacarImagen(drmBundle)" style="max-width: 20px; max-height: 20px;" alt="@Juegos.JuegoDRM2.DevolverDRM(drmBundle)" />
+
+							@if (juego.Analisis != null)
+							{
+								if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
+								{
+									if (int.Parse(juego.Analisis.Porcentaje) > 74)
+									{
+										<img src="/imagenes/analisis/positivo3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+									}
+
+									if (int.Parse(juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Analisis.Porcentaje) < 75)
+									{
+										<img src="/imagenes/analisis/meh3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+									}
+
+									if (int.Parse(juego.Analisis.Porcentaje) < 50)
+									{
+										<img src="/imagenes/analisis/negative3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+									}
+								}
+							}
 
 							@if (añadirNuevo == true)
 							{
